improve spacing in property card. https://github.com/UsabilityDynamics/www.reddoorcompany.com/issues/396

--- a/wp-content/plugins/wp-property-responsive-carousel/css/style.css
+++ b/wp-content/plugins/wp-property-responsive-carousel/css/style.css
@@ -299,7 +299,7 @@
 }
 .rdc-carousel-wrapper ul.rdc-carousel-items li.rdc-carousel-item .item-content ul {
   margin: 0;
-  padding: 20px 20px 12px 20px;
+  padding: 20px 15px 25px;
   list-style: none;
   text-align: center;
 }
